--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
+    "@ionic/lab": "^1.0.8",
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.0",
+    "ionic": "^4.1.1",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
